# BaselineWalkingController

./: .clang-format-common.sh  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  _config.yml  depends.rosinstall  index.html  package.xml  robots.txt
.github/workflows/: BaselineWalkingController.yaml  Dockerfile  Dockerfile-HVAC2022  ci-catkin.yaml  ci-standalone.yaml  ci.yaml  clang-format.yaml  docker.yaml
.github/workflows/config/: ClosedLoopMpc.yaml  DdpZmp.yaml  FootGuidedControl.yaml  HVAC2022UnevenTerrain.yaml  IntrinsicallyStableMpc.yaml  OpenLoopMpc.yaml  PreviewControlZmp.yaml  WalkingOnPlain.yaml  WalkingOnPlane.yaml  WalkingOnPlaneRos.yaml  WalkingOnPlaneVel.yaml  WalkingOnPlaneWaypoint.yaml  WalkingOnStairs.yaml  WalkingWithFootstepPlanner.yaml
.github/workflows/ros/: poseMsgWalkingOnPlaneRos.yaml
.github/workflows/scripts/: checkSimulationResults.py  clientWalkingOnPlaneRos.py  mergeConfigs.py  test_docker.bash
doc/: CMakeLists.txt  Doxyfile.extra.in  Doxyfile.in
doxygen/: BaselineWalkingController_8h.html  BaselineWalkingController_8h__incl.map  BaselineWalkingController_8h__incl.md5  BaselineWalkingController_8h_source.html  CentroidalManagerDdpZmp_8h.html  CentroidalManagerDdpZmp_8h__incl.map  CentroidalManagerDdpZmp_8h__incl.md5  CentroidalManagerDdpZmp_8h_source.html  CentroidalManagerFootGuidedControl_8h.html  CentroidalManagerFootGuidedControl_8h__incl.map  CentroidalManagerFootGuidedControl_8h__incl.md5  CentroidalManagerFootGuidedControl_8h_source.html  CentroidalManagerIntrinsicallyStableMpc_8h.html  CentroidalManagerIntrinsicallyStableMpc_8h__incl.map  CentroidalManagerIntrinsicallyStableMpc_8h__incl.md5  CentroidalManagerIntrinsicallyStableMpc_8h_source.html  CentroidalManagerPreviewControlZmp_8h.html  CentroidalManagerPreviewControlZmp_8h__incl.map  CentroidalManagerPreviewControlZmp_8h__incl.md5  CentroidalManagerPreviewControlZmp_8h_source.html  CentroidalManager_8h.html  CentroidalManager_8h__dep__incl.map  CentroidalManager_8h__dep__incl.md5  CentroidalManager_8h__incl.map  CentroidalManager_8h__incl.md5  CentroidalManager_8h_source.html  CommandState_8h.html  CommandState_8h__incl.map  CommandState_8h__incl.md5  CommandState_8h_source.html  CommonModels_8h.html  CommonModels_8h__dep__incl.map  CommonModels_8h__dep__incl.md5  CommonModels_8h__incl.map  CommonModels_8h__incl.md5  CommonModels_8h_source.html  ConfigFootstepState_8h.html  ConfigFootstepState_8h__incl.map  ConfigFootstepState_8h__incl.md5  ConfigFootstepState_8h_source.html  (+885 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+71 more)
etc/: BaselineWalkingController.in.yaml  mc_rtc.in.yaml
include/BaselineWalkingController/: BaselineWalkingController.h  CentroidalManager.h  ConfigUtils.h  FootManager.h  FootTypes.h  MathUtils.h  RobotUtils.h  State.h  SwingTraj.h
include/BaselineWalkingController/centroidal/: CentroidalManagerDdpZmp.h  CentroidalManagerFootGuidedControl.h  CentroidalManagerIntrinsicallyStableMpc.h  CentroidalManagerPreviewControlZmp.h
include/BaselineWalkingController/states/: CommandState.h  ConfigFootstepState.h  ConfigWalkState.h  FootstepPlannerState.h  GuiFootstepState.h  GuiWalkState.h  InitialState.h  RosWalkState.h  StepState.h  TeleopState.h
include/BaselineWalkingController/swing/: SwingTrajCubicSplineSimple.h  SwingTrajIndHorizontalVertical.h  SwingTrajLandingSearch.h  SwingTrajVariableTaskGain.h  SwingTrajVariableTaskStiffness.h
include/BaselineWalkingController/tasks/: FirstOrderImpedanceTask.h
include/BaselineWalkingController/trajectory/: CubicHermiteSpline.h  CubicInterpolator.h  CubicSpline.h  Func.h
include/BaselineWalkingController/wrench/: Contact.h  WrenchDistribution.h
launch/: display.launch  display.launch.py  teleop.launch  teleop.launch.py
rviz/: display.rviz  display2.rviz
src/: BaselineWalkingController.cpp  CMakeLists.txt  CentroidalManager.cpp  FootManager.cpp  FootTypes.cpp  MathUtils.cpp  RobotUtils.cpp  State.cpp  lib.cpp
src/centroidal/: CentroidalManagerDdpZmp.cpp  CentroidalManagerFootGuidedControl.cpp  CentroidalManagerIntrinsicallyStableMpc.cpp  CentroidalManagerPreviewControlZmp.cpp
src/states/: CMakeLists.txt  CommandState.cpp  ConfigFootstepState.cpp  ConfigWalkState.cpp  FootstepPlannerState.cpp  GuiFootstepState.cpp  GuiWalkState.cpp  InitialState.cpp  RosWalkState.cpp  StepState.cpp  TeleopState.cpp
src/swing/: SwingTrajCubicSplineSimple.cpp  SwingTrajIndHorizontalVertical.cpp  SwingTrajLandingSearch.cpp  SwingTrajVariableTaskGain.cpp  SwingTrajVariableTaskStiffness.cpp
src/tasks/: FirstOrderImpedanceTask.cpp
src/trajectory/: CubicHermiteSpline.cpp  CubicSpline.cpp
src/wrench/: Contact.cpp  WrenchDistribution.cpp
tests/: CMakeLists.txt
tests/SwingTraj/: CMakeLists.txt
tests/controller/: CMakeLists.txt  main.cpp
tests/controller/etc/: mc_rtc.yaml
tests/src/: TestCubicHermiteSpline.cpp  TestCubicInterpolator.cpp  TestCubicSpline.cpp  TestFunc.cpp  TestSwingTraj.cpp  TestWrenchDistribution.cpp
