<package format="3">
  <name>baseline_walking_controller</name>
  <version>0.1.0</version>
  <description>
    Humanoid walking controller with various baseline methods
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/baseline_walking_controller</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_collection</build_depend>
  <build_depend>force_control_collection</build_depend>
  <build_depend>centroidal_control_collection</build_depend>

  <build_depend>eigen</build_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
